--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,9 +1,10 @@
 [versions]
-agp = "8.10.1"
+agp = "8.2.2"
 composeBomVersion = "2025.05.00"
 hiltAndroid = "2.56.2"
 room = "2.7.1"
-kotlin = "2.0.21"
+kotlin = "1.9.21"
+compose = "1.5.11"
 coreKtx = "1.16.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
@@ -16,6 +17,16 @@ roomRuntime = "2.7.1"
 ui = "1.8.2"
 appcompat = "1.6.1"
 material = "1.10.0"
+foundationLayoutAndroid = "1.8.2"
+runtimeAndroid = "1.8.2"
+kotlinx-serialization = "1.6.3"
+
+
+hilt = "2.47"
+ditto = "4.8.1"
+timber = "5.0.1"
+
+hilt-navigation-compose = "1.2.0"
 
 [libraries]
 androidx-compose-bom-v20250500 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
@@ -42,9 +53,13 @@ androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
 
 hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version = "2.48" }
+androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
+androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
+kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
+android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
-kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-hilt = { id = "com.google.dagger.hilt.android", version = "2.48" }
+kotlin-compose = { id = "org.jetbrains.compose" }
+hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 
