--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,18 +1,18 @@
 [versions]
-agp = "8.2.2"
+agp = "8.3.0"
 composeBomVersion = "2025.05.00"
 hiltAndroid = "2.56.2"
-room = "2.7.1"
-kotlin = "1.9.21"
+room = "2.6.1"
+kotlin = "2.1.0"
 compose = "1.5.11"
-coreKtx = "1.16.0"
+coreKtx = "1.12.0"
 junit = "4.13.2"
 junitVersion = "1.2.1"
-espressoCore = "3.6.1"
+espressoCore = "3.5.1"
 lifecycleRuntimeKtx = "2.9.1"
 activityCompose = "1.10.1"
 composeBom = "2024.09.00"
-retrofit = "2.11.0"
+retrofit = "2.9.0"
 roomRuntime = "2.7.1"
 ui = "1.8.2"
 appcompat = "1.6.1"
@@ -27,6 +27,17 @@ ditto = "4.8.1"
 timber = "5.0.1"
 
 hilt-navigation-compose = "1.2.0"
+compose-compiler = "1.5.8"
+ksp = "1.9.21-1.0.15"
+
+androidx-lifecycle = "2.7.0"
+androidx-activity = "1.8.2"
+androidx-foundation = "1.6.1"
+androidx-runtime = "1.6.1"
+androidx-ui = "1.6.1"
+androidx-material3 = "1.2.0"
+androidx-navigation = "2.7.7"
+androidx-hilt-navigation = "1.1.0"
 
 [libraries]
 androidx-compose-bom-v20250500 = { module = "androidx.compose:compose-bom", version.ref = "composeBomVersion" }
@@ -56,10 +67,19 @@ hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version =
 androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
 androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
 kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
+
+androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
+androidx-ui-android = { group = "androidx.compose.ui", name = "ui", version.ref = "androidx-ui" }
+androidx-material3-android = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-material3" }
+androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation" }
+androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation" }
+ditto-core = { group = "io.github.raamcosta.compose-destinations", name = "core", version.ref = "ditto" }
+ditto-ksp = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "ditto" }
+
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
 android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.compose" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
-
+ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
