--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,7 @@
 [versions]
 agp = "8.6.0"
+androidxComposeBom = "2024.05.00"
+androidxComposeBomVersion = "2025.06.00"
 composeBomVersion = "2024.02.00"
 hiltAndroid = "2.48"
 lifecycleViewmodelCompose = "2.9.1"
@@ -44,6 +46,10 @@ roomCommonJvm = "2.7.1"
 
 [libraries]
 android-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
+androidx-compose-bom-v20240500 = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBom" }
+androidx-compose-bom-v20250600 = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBomVersion" }
+androidx-compose-runtime-runtime = { module = "androidx.compose.runtime:runtime" }
+androidx-compose-ui-ui = { module = "androidx.compose.ui:ui" }
 androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
 androidx-runtime = { module = "androidx.compose.runtime:runtime" }
@@ -69,7 +75,9 @@ androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-toolin
 androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
 androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
 androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
+material3 = { module = "androidx.compose.material3:material3" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
+runtime = { module = "androidx.compose.runtime:runtime" }
 ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
 androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
 material = { group = "com.google.android.material", name = "material", version.ref = "material" }
@@ -90,6 +98,7 @@ androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navig
 ditto-core = { group = "io.github.raamcosta.compose-destinations", name = "core", version.ref = "ditto" }
 ditto-ksp = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "ditto" }
 androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
+ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
