--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,104 +1,103 @@
 [versions]
-agp = "8.6.0"
-androidxComposeBom = "2024.05.00"
-androidxComposeBomVersion = "2025.06.00"
-composeBomVersion = "2024.02.00"
-hiltAndroid = "2.48"
-lifecycleViewmodelCompose = "2.9.1"
-room = "2.6.1"
-kotlin = "2.1.21"
-compose = "1.5.11"
-coreKtx = "1.12.0"
-junit = "4.13.2"
-junitVersion = "1.2.1"
-espressoCore = "3.5.1"
-lifecycleRuntimeKtx = "2.7.0"
-activityCompose = "1.8.2"
-composeBom = "2024.02.00"
-retrofit = "2.9.0"
-roomRuntime = "2.7.1"
-ui = "1.8.2"
-appcompat = "1.6.1"
-material = "1.10.0"
-foundationLayoutAndroid = "1.8.2"
-runtimeAndroid = "1.8.2"
-kotlinx-serialization = "1.6.3"
+agp = "8.10.0"
+kotlin = "1.9.22"
+ksp = "1.9.22-1.0.17"
+hilt = "2.50"
 coroutines = "1.7.3"
 gson = "2.10.1"
-ksp = "1.9.22-1.0.17"
-compose-compiler = "2.1.21"
-
-hilt = "2.48"
-ditto = "4.8.1"
-timber = "5.0.1"
-
-hilt-navigation-compose = "1.1.0"
-
-androidx-lifecycle = "2.7.0"
-androidx-activity = "1.8.2"
-androidx-foundation = "1.6.1"
-androidx-runtime = "1.6.1"
-androidx-ui = "1.6.1"
-androidx-material3 = "1.2.0"
-androidx-navigation = "2.7.7"
-androidx-hilt-navigation = "1.1.0"
-roomCommonJvm = "2.7.1"
+room = "2.6.1"
+retrofit = "2.9.0"
+okhttp = "4.12.0"
+compose = "1.5.4"
+compose-compiler = "1.5.8"
+compose-material3 = "1.1.2"
+compose-activity = "1.8.2"
+compose-navigation = "2.7.6"
+compose-hilt = "1.1.0"
+compose-lifecycle = "2.7.0"
+compose-runtime = "1.6.7"
+compose-ui = "1.5.4"
+compose-ui-tooling = "1.5.4"
+compose-ui-tooling-preview = "1.5.4"
+compose-ui-test = "1.5.4"
+compose-ui-test-manifest = "1.5.4"
+compose-ui-test-junit4 = "1.5.4"
+compose-ui-test-junit5 = "1.5.4"
+compose-ui-test-manifest-junit4 = "1.5.4"
+compose-ui-test-manifest-junit5 = "1.5.4"
+androidx-core-ktx = "1.12.0"
+androidx-lifecycle-runtime-ktx = "2.7.0"
+androidx-lifecycle-viewmodel-ktx = "2.7.0"
+androidx-activity-compose = "1.8.2"
+androidx-ui = "1.0.0-beta01"
+androidx-ui-graphics = "1.0.0-beta01"
+androidx-material3 = "1.1.2"
+androidx-navigation-compose = "2.7.6"
+androidx-hilt-navigation-compose = "1.1.0"
+androidx-lifecycle-runtime-compose = "2.7.0"
+androidx-lifecycle-viewmodel-compose = "2.7.0"
+androidx-junit = "1.1.5"
+androidx-espresso-core = "3.5.1"
+androidx-compose-bom = "2024.05.00"
+androidx-ui-test-junit4 = "1.5.4"
+androidx-ui-test-manifest = "1.5.4"
+androidx-appcompat = "1.6.1"
+material = "1.11.0"
+junit = "4.13.2"
+hilt-compiler = "2.50"
 
 [libraries]
-android-gradle-plugin = { group = "com.android.tools.build", name = "gradle", version.ref = "agp" }
-androidx-compose-bom-v20240500 = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBom" }
-androidx-compose-bom-v20250600 = { module = "androidx.compose:compose-bom", version.ref = "androidxComposeBomVersion" }
-androidx-compose-runtime-runtime = { module = "androidx.compose.runtime:runtime" }
-androidx-compose-ui-ui = { module = "androidx.compose.ui:ui" }
-androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "lifecycleViewmodelCompose" }
-androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleViewmodelCompose" }
-androidx-runtime = { module = "androidx.compose.runtime:runtime" }
-kotlin-gradle-plugin = { group = "org.jetbrains.kotlin", name = "kotlin-gradle-plugin", version.ref = "kotlin" }
-hilt-android-gradle-plugin = { group = "com.google.dagger", name = "hilt-android-gradle-plugin", version.ref = "hiltAndroid" }
-
-androidx-compose-bom = { group = "androidx.compose", name = "compose-bom", version.ref = "composeBom" }
-androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
-androidx-room-runtime = { module = "androidx.room:room-runtime", version.ref = "roomRuntime" }
-androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "roomRuntime" }
-androidx-room-ktx = { module = "androidx.room:room-ktx", version.ref = "roomRuntime" }
-hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
-hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
-junit = { group = "junit", name = "junit", version.ref = "junit" }
-androidx-junit = { group = "androidx.test.ext", name = "junit", version.ref = "junitVersion" }
-androidx-espresso-core = { group = "androidx.test.espresso", name = "espresso-core", version.ref = "espressoCore" }
-androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
-androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
-androidx-ui = { group = "androidx.compose.ui", name = "ui" }
-androidx-ui-graphics = { group = "androidx.compose.ui", name = "ui-graphics" }
-androidx-ui-tooling = { group = "androidx.compose.ui", name = "ui-tooling" }
-androidx-ui-tooling-preview = { group = "androidx.compose.ui", name = "ui-tooling-preview" }
-androidx-ui-test-manifest = { group = "androidx.compose.ui", name = "ui-test-manifest" }
-androidx-ui-test-junit4 = { group = "androidx.compose.ui", name = "ui-test-junit4" }
-androidx-material3 = { group = "androidx.compose.material3", name = "material3" }
-material3 = { module = "androidx.compose.material3:material3" }
+android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
+kotlin-gradle-plugin = { module = "org.jetbrains.kotlin:kotlin-gradle-plugin", version.ref = "kotlin" }
+hilt-android-gradle-plugin = { module = "com.google.dagger:hilt-android-gradle-plugin", version.ref = "hilt" }
+kotlin-stdlib = { module = "org.jetbrains.kotlin:kotlin-stdlib", version.ref = "kotlin" }
+kotlin-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
+kotlin-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
+gson = { module = "com.google.code.gson:gson", version.ref = "gson" }
+room-runtime = { module = "androidx.room:room-runtime", version.ref = "room" }
+room-ktx = { module = "androidx.room:room-ktx", version.ref = "room" }
+room-compiler = { module = "androidx.room:room-compiler", version.ref = "room" }
 retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit" }
-runtime = { module = "androidx.compose.runtime:runtime" }
-ui = { module = "androidx.compose.ui:ui", version.ref = "ui" }
-androidx-appcompat = { group = "androidx.appcompat", name = "appcompat", version.ref = "appcompat" }
-material = { group = "com.google.android.material", name = "material", version.ref = "material" }
-gson = { group = "com.google.code.gson", name = "gson", version.ref = "gson" }
-
-hilt-compiler = { group = "com.google.dagger", name = "hilt-compiler", version.ref = "hiltAndroid" }
-androidx-foundation-layout-android = { group = "androidx.compose.foundation", name = "foundation-layout-android", version.ref = "foundationLayoutAndroid" }
-androidx-runtime-android = { group = "androidx.compose.runtime", name = "runtime-android", version.ref = "runtimeAndroid" }
-kotlinx-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlinx-serialization" }
-kotlinx-coroutines-android = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-android", version.ref = "coroutines" }
-kotlinx-coroutines-core = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-core", version.ref = "coroutines" }
-
-androidx-lifecycle-viewmodel-ktx = { group = "androidx.lifecycle", name = "lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle" }
-androidx-ui-android = { group = "androidx.compose.ui", name = "ui", version.ref = "androidx-ui" }
-androidx-material3-android = { group = "androidx.compose.material3", name = "material3", version.ref = "androidx-material3" }
-androidx-navigation-compose = { group = "androidx.navigation", name = "navigation-compose", version.ref = "androidx-navigation" }
-androidx-hilt-navigation-compose = { group = "androidx.hilt", name = "hilt-navigation-compose", version.ref = "androidx-hilt-navigation" }
-ditto-core = { group = "io.github.raamcosta.compose-destinations", name = "core", version.ref = "ditto" }
-ditto-ksp = { group = "io.github.raamcosta.compose-destinations", name = "ksp", version.ref = "ditto" }
-androidx-room-common-jvm = { group = "androidx.room", name = "room-common-jvm", version.ref = "roomCommonJvm" }
-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview" }
+retrofit-gson = { module = "com.squareup.retrofit2:converter-gson", version.ref = "retrofit" }
+okhttp = { module = "com.squareup.okhttp3:okhttp", version.ref = "okhttp" }
+okhttp-logging = { module = "com.squareup.okhttp3:logging-interceptor", version.ref = "okhttp" }
+compose-material3 = { module = "androidx.compose.material3:material3", version.ref = "compose-material3" }
+compose-activity = { module = "androidx.activity:activity-compose", version.ref = "compose-activity" }
+compose-navigation = { module = "androidx.navigation:navigation-compose", version.ref = "compose-navigation" }
+compose-hilt = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "compose-hilt" }
+compose-lifecycle = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "compose-lifecycle" }
+compose-runtime = { module = "androidx.compose.runtime:runtime", version.ref = "compose-runtime" }
+compose-ui = { module = "androidx.compose.ui:ui", version.ref = "compose-ui" }
+compose-ui-tooling = { module = "androidx.compose.ui:ui-tooling", version.ref = "compose-ui-tooling" }
+compose-ui-tooling-preview = { module = "androidx.compose.ui:ui-tooling-preview", version.ref = "compose-ui-tooling-preview" }
+compose-ui-test = { module = "androidx.compose.ui:ui-test", version.ref = "compose-ui-test" }
+compose-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "compose-ui-test-manifest" }
+compose-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "compose-ui-test-junit4" }
+compose-ui-test-junit5 = { module = "androidx.compose.ui:ui-test-junit5", version.ref = "compose-ui-test-junit5" }
+compose-ui-test-manifest-junit4 = { module = "androidx.compose.ui:ui-test-manifest-junit4", version.ref = "compose-ui-test-manifest-junit4" }
+compose-ui-test-manifest-junit5 = { module = "androidx.compose.ui:ui-test-manifest-junit5", version.ref = "compose-ui-test-manifest-junit5" }
+androidx-core-ktx = { module = "androidx.core:core-ktx", version.ref = "androidx-core-ktx" }
+androidx-lifecycle-runtime-ktx = { module = "androidx.lifecycle:lifecycle-runtime-ktx", version.ref = "androidx-lifecycle-runtime-ktx" }
+androidx-lifecycle-viewmodel-ktx = { module = "androidx.lifecycle:lifecycle-viewmodel-ktx", version.ref = "androidx-lifecycle-viewmodel-ktx" }
+androidx-activity-compose = { module = "androidx.activity:activity-compose", version.ref = "androidx-activity-compose" }
+androidx-ui = { module = "androidx.compose.ui:ui", version.ref = "androidx-ui" }
+androidx-ui-graphics = { module = "androidx.compose.ui:ui-graphics", version.ref = "androidx-ui-graphics" }
+androidx-material3-android = { module = "androidx.compose.material3:material3", version.ref = "androidx-material3" }
+androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "androidx-navigation-compose" }
+androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-compose", version.ref = "androidx-hilt-navigation-compose" }
+androidx-lifecycle-runtime-compose = { module = "androidx.lifecycle:lifecycle-runtime-compose", version.ref = "androidx-lifecycle-runtime-compose" }
+androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "androidx-lifecycle-viewmodel-compose" }
+androidx-junit = { module = "androidx.test.ext:junit", version.ref = "androidx-junit" }
+androidx-espresso-core = { module = "androidx.test.espresso:espresso-core", version.ref = "androidx-espresso-core" }
+androidx-compose-bom = { module = "androidx.compose:compose-bom", version.ref = "androidx-compose-bom" }
+androidx-compose-bom-v20240500 = { module = "androidx.compose:compose-bom", version = "2024.05.00" }
+androidx-ui-test-junit4 = { module = "androidx.compose.ui:ui-test-junit4", version.ref = "androidx-ui-test-junit4" }
+androidx-ui-test-manifest = { module = "androidx.compose.ui:ui-test-manifest", version.ref = "androidx-ui-test-manifest" }
+androidx-appcompat = { module = "androidx.appcompat:appcompat", version.ref = "androidx-appcompat" }
+material = { module = "com.google.android.material:material", version.ref = "material" }
+junit = { module = "junit:junit", version.ref = "junit" }
+hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
+hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
@@ -106,4 +105,4 @@ android-library = { id = "com.android.library", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 hilt = { id = "com.google.dagger.hilt.android", version.ref = "hilt" }
 ksp = { id = "com.google.devtools.ksp", version.ref = "ksp" }
-compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "compose-compiler" }
+compose = { id = "org.jetbrains.compose", version.ref = "compose" } 
