fix: Improve keystore handling in release workflow
- Use base64 --decode instead of base64 -d for better compatibility
- Add keystore verification step to debug issues
- Add file inspection to verify keystore generation

This should fix the 'DerInputStream.getLength(): lengthTag=125, too big' error in GitHub Actions.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -53,9 +53,17 @@ jobs:
         
     - name: Generate keystore
       run: |
-        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 -d > app/keystore.jks
+        echo "${{ secrets.KEYSTORE_BASE64 }}" | base64 --decode > app/keystore.jks
+        ls -la app/keystore.jks
+        file app/keystore.jks
       env:
         KEYSTORE_BASE64: ${{ secrets.KEYSTORE_BASE64 }}
+        
+    - name: Verify keystore
+      run: |
+        keytool -list -keystore app/keystore.jks -storepass ${{ secrets.SIGNING_STORE_PASSWORD }} -v
+      env:
+        SIGNING_STORE_PASSWORD: ${{ secrets.SIGNING_STORE_PASSWORD }}
         
     - name: Build Release APK
       run: ./gradlew assembleRelease
