--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -19,6 +19,9 @@ on:
 jobs:
   build-and-release:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
+      packages: write
     
     steps:
     - name: Checkout code
@@ -78,12 +81,10 @@ jobs:
         
     - name: Create Release
       id: create_release
-      uses: actions/create-release@v1
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      uses: softprops/action-gh-release@v1
       with:
         tag_name: v${{ github.event.inputs.version_name }}
-        release_name: Kharrency v${{ github.event.inputs.version_name }}
+        name: Kharrency v${{ github.event.inputs.version_name }}
         body: |
           ## Kharrency v${{ github.event.inputs.version_name }}
           
@@ -120,21 +121,14 @@ jobs:
           ---
           
           **Download the APK below and start converting currencies! 📱💰**
+        files: app/build/outputs/apk/release/Kharrency-v${{ github.event.inputs.version_name }}.apk
         draft: false
         prerelease: false
-        
-    - name: Upload APK to Release
-      uses: actions/upload-release-asset@v1
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      with:
-        upload_url: ${{ steps.create_release.outputs.upload_url }}
-        asset_path: app/build/outputs/apk/release/Kharrency-v${{ github.event.inputs.version_name }}.apk
-        asset_name: Kharrency-v${{ github.event.inputs.version_name }}.apk
-        asset_content_type: application/vnd.android.package-archive
         
     - name: Output Release URL
       run: |
         echo "🎉 Release created successfully!"
-        echo "📱 APK Download URL: ${{ steps.create_release.outputs.html_url }}"
+        echo "📱 APK Download URL: ${{ steps.create_release.outputs.url }}"
         echo "🏷️ Tag: v${{ github.event.inputs.version_name }}" 
