Implement comprehensive in-app update system with APK download
Features:
- ✨ Add smart update checking with exponential backoff (30s → 10m intervals)
- 📱 Implement in-app APK download with real-time progress tracking
- 🔄 Add multiple update check triggers (startup, resume, conversions, pull-to-refresh)
- 🛡️ Add GitHub API rate limiting protection with user-friendly error messages
- 📥 Create ApkDownloadService with chunked downloading and FileProvider integration
- 🎨 Design enhanced UpdateDialog with download progress, install button, and release notes
- 🐛 Add extensive debug logging and error handling for update system
- ⚡ Implement battery and network awareness for update checks
- 🔒 Add security permissions for APK installation and external storage
- 💾 Add persistent rate limit tracking to respect GitHub API limits

Technical improvements:
- Add BuildConfig support for dynamic version display
- Implement coroutine-based async operations
- Add proper error handling for HTTP 403 rate limits
- Create secure APK installation flow using FileProvider
- Add comprehensive logging for debugging update flow
- Implement smart update scheduling to avoid API abuse

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -46,6 +46,7 @@ material = "1.11.0"
 junit = "4.13.2"
 hilt-compiler = "2.50"
 datastore-core-android = "1.1.7"
+media3-exoplayer = "1.7.1"
 
 [libraries]
 android-gradle-plugin = { module = "com.android.tools.build:gradle", version.ref = "agp" }
@@ -100,6 +101,7 @@ junit = { module = "junit:junit", version.ref = "junit" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hilt" }
 hilt-compiler = { module = "com.google.dagger:hilt-compiler", version.ref = "hilt" }
 androidx-datastore-core-android = { group = "androidx.datastore", name = "datastore-core-android", version.ref = "datastore-core-android" }
+androidx-media3-exoplayer = { group = "androidx.media3", name = "media3-exoplayer", version.ref = "media3-exoplayer" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
