Add 'What's New' input field to release workflow
- ✨ Add dedicated 'whats_new' input field for update dialog content
- 🎯 Separate user-facing updates from technical release notes
- 📝 Include example format with bullet points in workflow
- 🔄 Update release body structure to include 'What's New' section
- 🛠️ Modify UpdateService to parse 'What's New' content specifically
- 💡 Add fallback parsing for backward compatibility

When creating releases, developers can now specify:
- What's New: User-friendly updates shown in the update dialog
- Additional Notes: Technical details for release page

This improves the update experience by showing relevant changes
to users while maintaining detailed technical information.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -11,8 +11,15 @@ on:
         description: 'Version code (integer)'
         required: true
         default: '1'
+      whats_new:
+        description: 'What'\''s New (shown in update dialog) - Use • for bullet points'
+        required: true
+        default: '• Bug fixes and performance improvements
+• Updated currency exchange rates
+• Enhanced user interface'
+        type: string
       release_notes:
-        description: 'Release notes'
+        description: 'Additional release notes (optional)'
         required: false
         default: 'New release of Kharrency - Currency Exchange App'
 
@@ -90,6 +97,10 @@ jobs:
           
           **Version Code:** ${{ github.event.inputs.version_code }}
           
+          ### What's New:
+          ${{ github.event.inputs.whats_new }}
+          
+          ### Additional Notes:
           ${{ github.event.inputs.release_notes }}
           
           ### Features:
