Fix YAML syntax in release workflow
- Use proper YAML multiline syntax for whats_new default value
- This should resolve any parsing issues preventing workflow from appearing in GitHub Actions

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -14,9 +14,10 @@ on:
       whats_new:
         description: 'What'\''s New (shown in update dialog) - Use • for bullet points'
         required: true
-        default: '• Bug fixes and performance improvements
-• Updated currency exchange rates
-• Enhanced user interface'
+        default: |
+          • Bug fixes and performance improvements
+          • Updated currency exchange rates
+          • Enhanced user interface
         type: string
       release_notes:
         description: 'Additional release notes (optional)'
