Fix YAML syntax error on line 14
- Replace escaped single quotes with double quotes in description
- This resolves the YAML parsing error preventing workflow from loading

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -12,7 +12,7 @@ on:
         required: true
         default: '1'
       whats_new:
-        description: 'What'\''s New (shown in update dialog) - Use • for bullet points'
+        description: "What's New (shown in update dialog) - Use • for bullet points"
         required: true
         default: |
           • Bug fixes and performance improvements
